--- a/random_walk/style.css
+++ b/random_walk/style.css
@@ -4,4 +4,9 @@ html, body {
 }
 canvas {
   display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 2px solid red;
 }
